--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,8 @@
   align-items: center;
   justify-content: center;
 }
+.Loader {
+  display: flex ;
+  justify-content: center ; 
+  align-items: center
+}
